complete some jira  task

--- a/js/packages/web/src/components/AppBar/index.less
+++ b/js/packages/web/src/components/AppBar/index.less
@@ -9,9 +9,12 @@
     border-radius: 50px !important;
   }
   .app-right button.ant-btn.wallet-key {
-    border: none;
+    // border: none;
     padding: 0;
     min-width: 1px;
+    // margin: 0 0 0 3px;
+    text-align: center;
+    padding-bottom: 10px;
     &:hover{
       background-color:  transparent !important;
     }
