--- a/js/packages/web/src/components/Footer/index.less
+++ b/js/packages/web/src/components/Footer/index.less
@@ -296,6 +296,11 @@
         &:hover i {
           color: #6300ff;
         }
+        &:hover{
+          svg path {
+            fill: #6300ff;
+          }
+        }
       }
       i {
           font-size: 22px;
@@ -311,5 +316,7 @@
       }
     }
   }
-
+  .ant-select-arrow {
+    right: 18px;
+  }
 }
