--- a/js/packages/web/src/components/Notifications/index.less
+++ b/js/packages/web/src/components/Notifications/index.less
@@ -16,7 +16,7 @@
   .ant-list-vertical {
     .ant-list-item-meta-title {
       font-family: AvertaStd-Semibold;
-      font-size: 24px;
+      font-size: 20px;
       line-height: 130%;
       color: #000000;
       span{
@@ -29,7 +29,7 @@
     margin: 0;
     .des{
       font-family: AvertaStd-Semibold;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 130%;
       color: #909090;
       font-weight: 500;
@@ -44,6 +44,9 @@
 .notifications-container {
   .ant-list-item-meta-content, .ant-list-vertical , .ant-list-item-meta-description {
     color: #000 !important;
+  }
+  .ant-list {
+    font-size: 18px;
   }
 }
 
