--- a/js/packages/web/src/components/Banner/index.less
+++ b/js/packages/web/src/components/Banner/index.less
@@ -81,6 +81,7 @@
     justify-content: center;
     margin-left: 5vw;
     max-width: 450px;
+    text-align: left;
 
     #main-heading {
       font-weight: 500;
