--- a/js/packages/web/src/views/home/index.less
+++ b/js/packages/web/src/views/home/index.less
@@ -1,3 +1,71 @@
+.hero-slider {
+	width: 100%;
+	position: relative;
+  height: 550px;
+  margin-bottom: 60px;
+  overflow: hidden;
+  border-radius: 12px;
+  text-align: right;
+  padding: 0 16px;
+  input {
+    position: absolute;  
+    opacity: 0;
+    margin-top: 500px;
+    cursor: pointer;
+  }
+  
+  label {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border: solid 2px white;
+    margin: 500px 4px 0 4px;
+    position: relative;
+    z-index: 2;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    background: #FFFFFF;
+    opacity: 0.5;
+    border-radius: 15px;
+    cursor: pointer;
+    transition-duration: .4s;
+  }
+  input:checked + label{
+    background: #6300FF;
+    border: 1.08884px solid #FFFFFF;
+    box-shadow: 0px 4.35535px 5.44419px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    opacity: 1;
+  }
+
+  input:checked ~ .slide {
+    transform: translateX(100%);
+  }
+  
+  input:checked + label + .slide {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .slide {
+    position: absolute;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transform: translateX(-100%);
+    transition-duration: .4s;
+    opacity: 1;
+    z-index: 1;
+  }
+}
+
+
+
 header.ant-layout-header.App-Bar {
   width: 100%;
   background: transparent;
