Jira issue solving

--- a/js/packages/web/src/components/Layout/index.less
+++ b/js/packages/web/src/components/Layout/index.less
@@ -70,7 +70,7 @@
         background: url('/buttonBg.png') no-repeat 0 0 !important;
         background-size: cover !important;
         border: 1px solid #fff;
-        padding: 14px 20px 16px 20px;
+        padding: 14px 20px;
         height: 48px;
         font-size: 14px;
         text-align: center;
