--- a/js/packages/web/src/views/styles.less
+++ b/js/packages/web/src/views/styles.less
@@ -285,6 +285,13 @@ h2 {
   display: flex;
   flex-direction: column;
   text-align: left;
+  &.direction-row{
+    flex-direction: row;
+    align-items: center;
+    .field-title{
+      margin-bottom: 0 ;
+    }
+  }
   p{
     font-size: 18px;
   }
