Jira issue changes

--- a/js/packages/web/src/components/AppBar/index.less
+++ b/js/packages/web/src/components/AppBar/index.less
@@ -14,7 +14,7 @@
     min-width: 1px;
     // margin: 0 0 0 3px;
     text-align: center;
-    padding-bottom: 10px;
+    padding-bottom: 0;
     &:hover{
       background-color:  transparent !important;
     }
