--- a/js/packages/web/src/components/Layout/index.less
+++ b/js/packages/web/src/components/Layout/index.less
@@ -50,8 +50,11 @@
       line-height: 42px;
       text-align: center;
       border-radius: 50px;
-      display: inline-block;
-      vertical-align: top;
+      // display: inline-block;
+      // vertical-align: top;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       &:after{
         display: none;
       }
