--- a/js/packages/web/src/styles/app.less
+++ b/js/packages/web/src/styles/app.less
@@ -588,7 +588,6 @@ div.ant-upload-list-item{
   display: flex;
   flex-wrap: wrap;
   margin: 0 -15px 20px -15px;
-  width: calc(100% - 30px);
   &:last-child{
     margin-bottom: 0;
   }
@@ -597,6 +596,7 @@ div.ant-upload-list-item{
     padding: 0 15px;
     flex: unset;
     width: 25%;
+    margin-bottom: 30px;
   }
   > svg {
     filter: invert(1);
