buy pages changes

--- a/js/packages/web/src/components/AuctionCard/index.less
+++ b/js/packages/web/src/components/AuctionCard/index.less
@@ -48,6 +48,8 @@
       .actions-place-bid{
         display: flex;
         align-items: center;
+        margin-top: 15px;
+        justify-content: space-between;
         @media (max-width: @screen-sm-min) {
           button{
             flex: 1;
