--- a/js/packages/web/src/views/auction/index.less
+++ b/js/packages/web/src/views/auction/index.less
@@ -24,9 +24,12 @@
   }
   .auction-container{
     margin: 0;
+    .bid-info{
+      padding-left: 0;
+      padding-right: 0;
+    }
     .time-info{
-      padding-top: 0;
-      padding-bottom: 0;
+      padding: 0;
       flex-direction: column;
       align-items: flex-start;
       > span{
@@ -280,7 +283,7 @@ h6.info-title {
 	text-transform: none;
 	margin-bottom: 15px;
 	font-family: 'AvertaStd-Bold';
-	font-size: 16px;
+	font-size: 15px;
 	line-height: 130%;
 	color: #979797;
 }
