--- a/js/packages/web/src/components/AuctionCard/index.less
+++ b/js/packages/web/src/components/AuctionCard/index.less
@@ -7,9 +7,12 @@
   .sol-input-bid {
     width: 100%;
     height: 56px;
-    background: #393939;
+    background: #fff;
     border-radius: 12px;
     border: 1px solid @metaplex-primary-color;
+    .ant-input-number-input{
+      color: #000;
+    }
   }
   .ant-input-number-handler-wrap {
     display: none;
@@ -31,6 +34,7 @@
       display: flex;
       align-items: stretch;
       justify-content: space-between;
+      flex-wrap: wrap;
       @media (max-width: @screen-sm-min) {
         flex-direction: column;
       }
@@ -50,6 +54,7 @@
         align-items: center;
         margin-top: 15px;
         justify-content: space-between;
+        width: 100%;
         @media (max-width: @screen-sm-min) {
           button{
             flex: 1;
@@ -179,7 +184,7 @@
   }
   .bid-buttons{
     display: flex;
-    margin-top: 10px;
+    margin-top: 20px;
     @media(max-width: 768px){
       flex-direction: row;
       justify-content: space-between;
