--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -214,16 +214,17 @@
 
     .art-name {
       padding: 0;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-      line-height: 32px;
+      line-height: 120%;
       font-weight: 600;
       font-family: AvertaStd-Semibold;
-      font-size: 22px;
+      font-size: 18px;
       display: flex;
       align-items: center;
       color: #000000;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
 
     .auction-info-container {
@@ -340,13 +341,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: flex-start;
   .art-detail{
-    width: 60%;
+    width: 50%;
   }
   .card-bid-info{
     padding: 0;
     min-height: 1px;
-    width: 40%;
+    width: 50%;
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
