--- a/js/packages/web/src/views/auction/index.less
+++ b/js/packages/web/src/views/auction/index.less
@@ -304,7 +304,7 @@ h6.info-title {
   line-height: 14px;
   font-weight: 400;
   letter-spacing: 0.02em;
-  margin-bottom: 16px;
+  margin-bottom: 0;
 }
 
 .a-description {
@@ -351,7 +351,8 @@ h6.info-title {
     .ant-col{
       flex: unset !important;
       .ant-list-item{
-        margin: 15px;
+        margin-right: 10px;
+        margin-bottom: 10px;
       }
     }
   }
