--- a/js/packages/web/src/views/styles.less
+++ b/js/packages/web/src/views/styles.less
@@ -585,14 +585,19 @@ span.ant-input-group-addon {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 50px;
-    > span{
-      margin: 0 5px;
-      font-family: 'AvertaStd-Bold';
-      font-size: 16px;
-      line-height: 140%;
-      text-align: center;
-      color: #000000;
-    }
+    > a{
+      span{
+        margin: 0 5px;
+        font-family: 'AvertaStd-Bold';
+        font-size: 16px;
+        line-height: 140%;
+        text-align: center;
+        color: #000000;
+      }
+      &:hover{
+        color: #6300FF;
+      }
+    }    
   }
 }
 
