--- a/js/packages/web/src/components/Modals/index.less
+++ b/js/packages/web/src/components/Modals/index.less
@@ -9,7 +9,6 @@
   width: 500px;
   background: #fff;
 }
-
 .congratulations-root {
   padding: 92px 56px 72px;
   display: flex;
@@ -66,5 +65,23 @@
     background: transparent;
     border: none;
     padding: 0;
+  }
+}
+
+.ant-modal-content{
+  .ant-modal-body {
+    width: 100%;
+  }
+}
+
+.ant-modal-footer {
+  .ant-btn-primary{
+    color: #fff;
+  }
+  .ant-btn:not(.ant-btn-primary){
+    border-radius: 50px;
+    &:hover{
+      color: #fff;
+    }
   }
 }
