--- a/js/packages/web/src/styles/app.less
+++ b/js/packages/web/src/styles/app.less
@@ -321,6 +321,18 @@ model-viewer {
   --poster-color: transparent;
 }
 
+.bid-buttons {
+  .ant-btn.secondary-btn {
+    background: #6300FF !important;
+    .ant-spin-dot{
+      margin-top: 5px;
+      > i{
+        background: #fff;
+      }
+    }
+  }
+}
+
 .creator-base-page {
   &.creat-new-nft{
     justify-content: center;
