--- a/js/packages/web/src/views/art/index.less
+++ b/js/packages/web/src/views/art/index.less
@@ -80,6 +80,12 @@
       margin-top: -8px;
     }
   }
+  div {
+    > a{
+      display: flex;
+      align-items: center;
+    }
+  }
 }
 .new-viewon h6,
 .art-creater-details h6 {
