--- a/js/packages/web/src/views/auction/index.less
+++ b/js/packages/web/src/views/auction/index.less
@@ -290,8 +290,8 @@ h6.info-title {
 
 .bids-lists{
   width: 100%;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 0;
+  padding-right: 0;
   @media (max-width: @screen-sm-min) {
     padding-left: 0;
     padding-right: 0;
@@ -365,9 +365,9 @@ h6.info-title {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 7px 20px;
+    padding: 8px 20px;
     .ant-card-head{
-      padding: 0;
+      padding: 0 0 5px 0;
       border: none;
       min-height: 1px;
       .ant-card-head-title{
@@ -456,11 +456,14 @@ h6.info-title {
   align-items: center;
   border-bottom: 1px solid  rgba(255, 255, 255, 0.1);
 
-  .create-statistic .ant-statistic-content {
-    line-height: 22px;
+  .create-statistic{
+    line-height: 0;
+    .ant-statistic-content {
+      line-height: 22px;
+    }
   }
   .ant-statistic-content-value {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 25px;
     margin: auto;
   }
@@ -469,10 +472,12 @@ h6.info-title {
   }
   .usd {
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     padding: 0;
     min-height: 0;
     margin-left: 6px;
+    font-size: 12px;
+    line-height: 120%;
   }
 }
 
