profile design  changes

--- a/js/packages/web/src/components/CurrentUserBadge/index.less
+++ b/js/packages/web/src/components/CurrentUserBadge/index.less
@@ -79,6 +79,18 @@ h5 {
   line-height: 130%;
   color: #919191;
 }
+.ant-popover-inner-content .drop-profile-img {
+	width: 65px;
+	height: 65px;
+	position: relative;
+	overflow: hidden;
+	border-radius: 100px;
+}
+.ant-popover-inner-content .drop-profile-img > img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 .profile-detail .balance-title {
 	font-family: AvertaStd-Regular;
 	font-size: 18px;
