--- a/js/packages/web/src/components/ArtCard/index.less
+++ b/js/packages/web/src/components/ArtCard/index.less
@@ -39,7 +39,7 @@
   }
   div.art-content__wrapper{
     padding: 0;
-    border-radius: 10pxs;
+    border-radius: 10px;
     > div{
       width: 100%;
       .ant-image{
@@ -76,6 +76,19 @@
       position: relative;
       padding: 0 20px;
       margin-bottom: 0;
+      .ant-avatar-image{
+        margin-bottom: 0;
+        width: 36px;
+        height: 36px;
+        border-radius: 50px;
+        overflow: hidden;
+        border: 2px solid #FFFFFF;
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
     }
     .ant-card-meta{
       position: relative;
