--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -154,14 +154,23 @@
         margin-top: -15px;
         z-index: 1;
         position: relative;
-        padding: 0 12px;
+        padding: 0 20px;
         align-items: center;
       }
     }
 
     .card-artist-info {
       margin-bottom: 0;
-
+      width: 36px;
+      height: 36px;
+      border-radius: 50px;
+      overflow: hidden;
+      border: 2px solid #FFFFFF;
+      > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
       &--pack {
         display: flex;
         justify-content: space-between;
