--- a/js/packages/web/src/components/ArtCard/index.less
+++ b/js/packages/web/src/components/ArtCard/index.less
@@ -76,7 +76,7 @@
       position: relative;
       padding: 0 20px;
       margin-bottom: 0;
-      .ant-avatar-image{
+      .custom-avatar-image{
         margin-bottom: 0;
         width: 36px;
         height: 36px;
@@ -87,6 +87,9 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
+        }
+        span.ant-avatar {
+          display: none;
         }
       }
     }
