--- a/js/packages/web/src/views/art/index.less
+++ b/js/packages/web/src/views/art/index.less
@@ -79,6 +79,17 @@
     &.creators {
       margin-top: -8px;
     }
+    &.custom-avatar{
+      width: 32px;
+      height: 32px;
+      overflow: hidden;
+      border-radius: 50px;
+      > img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
   }
   div {
     > a{
