--- a/js/packages/web/src/views/art/index.less
+++ b/js/packages/web/src/views/art/index.less
@@ -79,7 +79,7 @@
     &.creators {
       margin-top: -8px;
     }
-    &.custom-avatar{
+    &.custom-avtar{
       width: 32px;
       height: 32px;
       overflow: hidden;
