--- a/js/packages/web/src/components/AuctionCard/index.less
+++ b/js/packages/web/src/components/AuctionCard/index.less
@@ -6,7 +6,7 @@
 
   .sol-input-bid {
     width: 100%;
-    height: 56px;
+    height: 52px;
     background: #fff;
     border-radius: 12px;
     border: 1px solid @metaplex-primary-color;
@@ -76,9 +76,9 @@
       line-height: 36px;
       margin-right: 6px;
     }
-    .ant-statistic-content-prefix {
-      line-height: 32px;
-    }
+    // .ant-statistic-content-prefix {
+    //   line-height: 32px;
+    // }
     .how-auctions-work {
       font-weight: 600;
       letter-spacing: -0.02em;
@@ -159,9 +159,11 @@
   background: #5626BA;
   border-radius: 8px;
   width: 200px;
-  font-size: 2rem;
+  font-size: 17px;
   height: auto;
-
+  padding: 15px;
+  color: #fff;
+  border: none;
   &:hover {
     background: #a99ac7;
     color: #5300ff;
