--- a/js/packages/web/src/views/art/index.less
+++ b/js/packages/web/src/views/art/index.less
@@ -68,6 +68,18 @@
     }
   }
 }
+
+.info-profile {
+  display: flex;
+  align-items: center;
+  span{
+    font-family: 'AvertaStd-Semibold';
+    font-size: 14px;
+    line-height: 16px;
+    color: #0E0E0E;
+    font-weight: normal;
+  }
+}
 .art-creater-details {
   .creator-name,
   div {
