--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -237,7 +237,7 @@
     }
 
     .auction-info-container {
-      padding: 10px 12px;
+      padding: 11px 12px 9px 12px;
       background: #ededed;
       border-radius: 15px;
       font-family: AvertaStd-Semibold;
@@ -248,6 +248,7 @@
       color: #000000;
       .clk{
         margin-right: 5px;
+        margin-top: -2px;
       }
     }
 
