--- a/js/packages/web/src/views/auction/index.less
+++ b/js/packages/web/src/views/auction/index.less
@@ -197,6 +197,7 @@ h6 {
       font-size: 14px;
       line-height: 16px;
       color: #0E0E0E;
+      margin-top: -5px;
     }
   }
 }
@@ -314,6 +315,9 @@ h6.info-title {
 	line-height: 130%;
 	color: #0E0E0E;
   margin-bottom: 28px;
+  &:last-child{
+    margin-bottom: 10px;
+  }
   @media (max-width: 767px) {
     font-size: 14px;
     margin-bottom: 15px;
