--- a/js/packages/web/src/components/ArtCard/index.less
+++ b/js/packages/web/src/components/ArtCard/index.less
@@ -128,7 +128,7 @@
     line-height: 120%;
     font-weight: 600;
     font-family: AvertaStd-Semibold;
-    font-size: 22px;
+    font-size: 20px;
     display: flex;
     align-items: center;
     color: #000000;
@@ -194,4 +194,12 @@
 
 .cd-time {
   color: #000;
+}
+
+
+.ant-row.content-action.sell-card {
+	margin: 0 0 20px 0;
+}
+.ant-row.content-action.sell-card .artwork-grid{
+  margin: 0;
 }
