--- a/js/packages/web/src/styles/app.less
+++ b/js/packages/web/src/styles/app.less
@@ -622,7 +622,7 @@ div.ant-upload-list-item{
     margin-bottom: 30px;
   }
   & > div{
-    padding: 0 0;
+    padding: 0 15px;
     box-shadow: 0 0 31px 0 rgba(0,0,0,0.05);
     &.ant-card{
       div.ant-card-body{
@@ -821,7 +821,7 @@ div.waiting-title {
 	font-family: AvertaStd-Bold;
 	font-size: 32px;
 	line-height: 120%;
-	color: #fff;
+	color: #000;
 	margin-top: 40px;
 }
 div.waiting-title.congo{
