--- a/js/packages/web/src/views/art/index.less
+++ b/js/packages/web/src/views/art/index.less
@@ -72,6 +72,11 @@
 .info-profile {
   display: flex;
   align-items: center;
+  > a{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
   span{
     font-family: 'AvertaStd-Semibold';
     font-size: 14px;
